# emacs-config-generator

./: .build.yml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml
src/: features.rs  languages.rs  main.rs  query_extractor.rs
static/: fontselector.js
templates/: _form.html  config.html  config.txt  index.html  init.txt
