[package]
name = "emacs-config-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.18"
eyre = "0.6.8"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tower = "0.4.13"
